<resources>
    <string name="title_activity_test">TestActivity</string>
    <string name="submit">Submit</string>
    <string name="category">Category: </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Create Event Strings & Hints -->
    <string name="createEvent">Create New Event</string>
    <string name="eventName">Event Name:</string>
    <string name="eventCampus">Campus:</string>
    <string name="eventCategory">Category:</string>
    <string name="eventLocation">Location:</string>
    <string name="eventCreated">Created By:</string>
    <string name="eventDate">Date:</string>
    <string name="eventDetails">Details:</string>

    <string name="app_name">SCE APP</string>
    <string name="login_email_activity">Email</string>
    <string name="login_password_activity">Password</string>
    <string name="signup_email_activity">Email</string>
    <string name="signup_password_activity">Password</string>
    <string name="signup_school_activity">School</string>


    <string-array name="category_array">
        <item>Choose a Category</item>
        <item>Academic</item>
        <item>Athletic</item>
        <item>Arts</item>
        <item>Community Service</item>
        <item>Computing</item>
        <item>Social</item>
        <item>Religious</item>
        <item>Greek</item>
    </string-array>
    <string name="title_activity_login_page">LoginPage</string>

</resources>
