<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.example.briannak.campuseventproject.EventInfo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/eventNameInfo"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/eventName"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateInfo"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/eventDate"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/univInfo"
            android:text="@string/eventCampus"
            android:textColor="@color/white" />

    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/test"
        android:layout_gravity="center"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details: "
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailInfo"
        android:text="@string/eventDetails"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category: "
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categInfo"
                android:text="@string/eventCategory"
                android:textColor="@color/white"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
