<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.briannak.campuseventproject.CreateEvent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEvent"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/eventNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:ems="10"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:hint="@string/eventName"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="130dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/dateEdit"
        android:layout_width="wrap_content"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="@color/colorAccent"

        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/eventDate"
        android:inputType="textPersonName"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/spinnerCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/detailsEdit"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"

        android:textColorHint="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/eventDetails"
        android:inputType="textMultiLine"
        android:layout_below="@+id/eventNameEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginBottom="51dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dateEdit"
        android:layout_alignEnd="@+id/dateEdit" />

    <AutoCompleteTextView
        android:id="@+id/campusEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:hint="@string/eventCampus"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:completionThreshold="1"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/detailsEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dateEdit"
        android:layout_alignEnd="@+id/dateEdit" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:textColor="#000"
        android:overlapAnchor="false"
        android:layout_marginTop="10dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/campusEdit" />

</RelativeLayout>
